test/files/neg/sip23-uninitialized-2.scala
object Test {
  var f2: 1 = _    // error: default init prohibited
}
