test/files/neg/sip23-uninitialized-2.check
sip23-uninitialized-2.scala:2: error: default initialization prohibited for literal-typed vars
  var f2: 1 = _    // error: default init prohibited
          ^
1 error
